--- a/_config.yml
+++ b/_config.yml
@@ -61,7 +61,10 @@ content:
       - Driving Artificial Intelligence/Machine Learning (AI/ML) strategy and Public Cloud blueprints for products transformation within a technology organization
       - Creating business value through successful AI/ML and Cloud POCs leading to solutions in production
       - Promoting inclusiveness and partnership by engaging all required teams to build solutions
-      
+  - title: Skills
+    layout: text
+    content: |
+      Artificial Intelligence (ML, NLP, Categorization, Anomaly Detection)  DB – ETL (Oracle, DB2, Dynamo DB, Mongo DB, SQL Server, SAS, Rabbit MQ, Kafka)  Business Intelligence and Analytics (Tableau, Kibana & Elastic Search, Splunk)  Programming/Scripting Language (C#,C++,Java, Spark, Tomcat, Spring, Kafka, Angular, JQuery,  MongoDB, Python, SAS, R, ASP.NET)   Integration (REST/SOA/API)  Cloud Implementation (AWS, Azure, Google)  Virtualization (VMWare)  WebSphere (WAS, WMQ,)  DevOps (Jenkins, Electric Flow)  Versioning (Git, Team site, Subversion)  Agile Tools (JIRA, Version 1) AWS Cloud (EC2, Elastic load balancing, EMR, Elastic Search, Kibana, SQS, SNS, Dynamo DB, Route 53, AWS cloud watch, Elastic Beanstalk, Redshaft, Lambda functions, Server less compute, S3 etc.)  Container Services (Docker, Elastic Kubernetes)  ORM tools (Hibernate, iBatis)  Web Frameworks (Struts, JSF, spring, Node JS)  Big Data (Hadoop, Hive, Sqoop, Hive SQL, Map reduce, Pig script, Spark, Impala)  CICD (Jenkins, Electric Flow, Sonar)
   - title: Experience # Title for the section
     layout: list # Type of content section (list/text)
     content:
